# hocuspocus-rs

./: .gitignore  Cargo.toml  README.md
crates/hocuspocus/: Cargo.toml
crates/hocuspocus/benches/: throughput.rs
crates/hocuspocus/examples/: bench_server.rs  loadtest.rs  server.rs
crates/hocuspocus/src/: config.rs  context.rs  document.rs  error.rs  extension.rs  lib.rs  origin.rs  protocol.rs  server.rs
crates/hocuspocus/src/extensions/: database.rs  logger.rs  mod.rs  redis.rs  sqlite.rs  throttle.rs  webhook.rs
crates/hocuspocus/tests/: persistence.rs  redis_scaling.rs  sync.rs
